--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kwaai-authware",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Express middleware specifically for multi-tenant and authorisation scenarios using Mongo and Express",
   "main": "./index.js",
   "author": {
@@ -15,6 +15,7 @@
       "kwaai-crudware":"~0.0.7",
       "kwaai-crud":"~0.0.9",
       "kwaai-schema":"~0.0.4",
+      "mongodb": "~1.4.7",
       "password-hash-and-salt": "^0.1.2"
   },
   "engines": {
@@ -22,6 +23,6 @@
   },
   "license": "MIT",
   "homepage": "https://github.com/martinza78/kwaai-authware",
-  "_id": "kwaai-authware@0.0.3",
+  "_id": "kwaai-authware@0.0.4",
   "_from": "kwaai-authware@"
 }
