--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kwaai-authware",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Express middleware specifically for multi-tenant and authorisation scenarios using Mongo and Express",
   "main": "./index.js",
   "author": {
@@ -12,9 +12,9 @@
     "url": "git://github.com/martinza78/kwaai-authware"
   },
   "dependencies": {
-      "kwaai-crudware":"~0.0.8",
-      "kwaai-crud":"~0.0.10",
-      "kwaai-schema":"~0.0.4",
+      "kwaai-crudware":"0.0.8",
+      "kwaai-crud":"0.0.10",
+      "kwaai-schema":"0.0.4",
       "mongodb": "~1.4.7",
       "password-hash-and-salt": "^0.1.2",
       "deepcopy":"~0.3.3"
@@ -24,6 +24,6 @@
   },
   "license": "MIT",
   "homepage": "https://github.com/martinza78/kwaai-authware",
-  "_id": "kwaai-authware@0.0.8",
+  "_id": "kwaai-authware@0.0.9",
   "_from": "kwaai-authware@"
 }
