--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kwaai-authware",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "Express middleware specifically for multi-tenant and authorisation scenarios using Mongo and Express",
   "main": "./index.js",
   "author": {
@@ -12,18 +12,18 @@
     "url": "git://github.com/martinza78/kwaai-authware"
   },
   "dependencies": {
-      "kwaai-crudware":"0.0.8",
-      "kwaai-crud":"0.0.10",
-      "kwaai-schema":"0.0.4",
-      "mongodb": "~1.4.7",
-      "password-hash-and-salt": "^0.1.2",
-      "deepcopy":"~0.3.3"
+    "deepcopy": "~0.3.3",
+    "kwaai-crud": "0.0.11",
+    "kwaai-crudware": "0.0.9",
+    "kwaai-schema": "0.0.4",
+    "mongodb": "1.4.15",
+    "password-hash-and-salt": "^0.1.2"
   },
   "engines": {
     "node": ">= 0.10.0"
   },
   "license": "MIT",
   "homepage": "https://github.com/martinza78/kwaai-authware",
-  "_id": "kwaai-authware@0.0.11",
+  "_id": "kwaai-authware@0.0.12",
   "_from": "kwaai-authware@"
 }
