--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kwaai-authware",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Express middleware specifically for multi-tenant and authorisation scenarios using Mongo and Express",
   "main": "./index.js",
   "author": {
@@ -17,13 +17,14 @@
     "kwaai-crudware": "0.1.3",
     "kwaai-schema": "0.0.6",
     "mongodb": "1.4.19",
-    "password-hash-and-salt": "0.1.2"
+    "password-hash-and-salt": "0.1.2",
+      "async": "0.9.0"
   },
   "engines": {
     "node": ">= 0.10.0"
   },
   "license": "MIT",
   "homepage": "https://github.com/martinza78/kwaai-authware",
-  "_id": "kwaai-authware@0.1.2",
+  "_id": "kwaai-authware@0.1.3",
   "_from": "kwaai-authware@"
 }
