--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "name": "kwaai-authware",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Express middleware specifically for multi-tenant and authorisation scenarios using Mongo and Express",
   "main": "./index.js",
   "author": {
     "name": "Martin Naude",
-    "email": "martin@entelect.co.za"
+    "email": "martin@encentivize.co.za"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/martinza78/kwaai-authware"
+    "url": "git://github.com/Encentivize/kwaai-authware"
   },
   "dependencies": {
-    "deepcopy": "0.3.3",
-    "kwaai-crud": "0.1.3",
-    "kwaai-crudware": "0.1.5",
+    "deepcopy": "0.4.0",
+    "kwaai-crud": "0.1.4",
+    "kwaai-crudware": "0.1.6",
     "kwaai-schema": "0.0.6",
-    "mongodb": "1.4.19",
+    "mongodb": "1.4.28",
     "password-hash-and-salt": "0.1.2",
-      "async": "0.9.0"
+    "async": "0.9.0"
   },
   "engines": {
     "node": ">= 0.10.0"
   },
   "license": "MIT",
-  "homepage": "https://github.com/martinza78/kwaai-authware",
-  "_id": "kwaai-authware@0.1.4",
+  "homepage": "https://github.com/Encentivize/kwaai-authware",
+  "_id": "kwaai-authware@0.1.5",
   "_from": "kwaai-authware@"
 }
